--- a/test.css
+++ b/test.css
@@ -1,12 +1,53 @@
 .menu{
-	      height: 100%;
+
+	      text-align: center;
 }
-ul {
-	position: fixed;
-	bottom:0;
+
+
+nav ul {
+	width: 100%;
+
+    list-style: none;
+    padding: 0;
+    position: absolute;
+    bottom: 20%;
+
+
 }
+
 nav li {
-	text-decoration: none;
+
       display: inline-block;
+
+}
+
+/*Style for menu links*/
+nav li a {
+    display:block;
+    min-width:140px;
+    height: 50px;
+    line-height: 50px;
+    text-decoration: none;
+}
+
+/*Hover state for top level links*/
+nav li:hover a {
+    background: #555F79;
+}
+
+@media screen and (max-width: 590px) {
+
+nav ul {
+	bottom: 2%;
+}
+
+    /*Create vertical spacing*/
+    nav li {
+        margin-bottom: 1px;
+    }
+    /*Make all menu links full width*/
+    nav ul li, li a {
+        width: 100%;
+    }
 
 }
